# ForgeUI-One

./: About.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
docs/images/Icons/64x64 Dark set 1/: ffg_icon_admin_64_dark.c  fg_icon_about_64_dark.c  fg_icon_add_users_64_dark.c  fg_icon_audio_64_dark.c  fg_icon_browse_64_dark.c  fg_icon_cloud_64_dark.c  fg_icon_database_64_dark.c  fg_icon_datetime_64_dark.c  fg_icon_docs_64_dark.c  fg_icon_export_64_dark.c  fg_icon_files_64_dark.c  fg_icon_forgeui_64_dark.c  fg_icon_gps_64_dark.c  fg_icon_help_64_dark.c  fg_icon_info_64_dark.c  fg_icon_internet_64_dark.c  fg_icon_licence_64_dark.c  fg_icon_lock_64_dark.c  fg_icon_logoff_64_dark.c  fg_icon_logon_64_dark.c  fg_icon_logs_64_dark.c  fg_icon_logs_64_dark_small.c  fg_icon_pictures_64_dark.c  fg_icon_power_64_dark.c  fg_icon_preop_64_dark.c  fg_icon_remove_users_64_dark.c  fg_icon_sdcard_64_dark.c  fg_icon_sidetab_64_dark.c  fg_icon_sim_64_dark.c  fg_icon_sound2_64_dark.c  fg_icon_sound_64_dark.c  fg_icon_support_64_dark.c  fg_icon_system_64_dark.c  (+5 more)
main/: 00_ForgeUI_Config.h  01_1Spine.md  01_FG_HMI.c  01_FG_HMI.h  02_FG_HMI.c  02_UI_Home.c  05_FG_Icons.c  05_FG_Icons.h  10_UI_Dashboard.c  10_UI_Dashboard.h  11_UI_PreOp.c  11_UI_PreOp.h  12_UI_System.c  12_UI_System.h  13_UI_Admin.c  13_UI_Admin.h  14_UI_Header.c  14_UI_Header.h  15_UI_Keyboard.c  15_UI_Keyboard.h  16_UI_AdminGate.c  16_UI_AdminGate.h  16_UI_Style.c  16_UI_Style.h  17_UI_ReactorModal.c  17_UI_ReactorModal.h  17_UI_StatusDrawer.c  17_UI_StatusDrawer.h  20_RTC.c  20_RTC.h  30_Audio.c  30_Audio.h  30_WIFI.c  30_WIFI.h  40_SD.c  40_SD.h  50_SDMMC_BUS.c  50_SDMMC_BUS.h  90_Studio_Export.c  CMakeLists.txt  (+2 more)
main/assets/icons/: fg_icon_brightness_64_dark.c  fg_icon_time_64_dark.c  fg_icon_wifi_64_dark.c
(+3 files in other folders)
